--- a/settings/project.json
+++ b/settings/project.json
@@ -1,3 +1,6 @@
 {
-  "start-scene": "7fec092e-97ff-42f8-b46e-9302c75fa122"
+  "start-scene": "7b150e39-54f3-4ccb-ad74-6498b2c8e607",
+  "group-list": [
+    "default"
+  ]
 }
